# isofit

./: .coverage  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CITATION  CITATION.cff  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  algorithm_config.yaml  latest  mkdocs.yml  multisurface_oe_template.json  pyproject.toml  pytest.ini  run_isofit_single_pixel.py  setup-devenv.sh  setup.cfg  setup.py  solar_irr.npy  surface_model.py  versions.json
.github/workflows/: black.yml  build.yml  check_distros.yml  ci.yml  debugging.yml  dispatch.yml  docker.yml  example-testing.yml  images.yml  isort.yml  linter.yml  main-workflow.yml  mkdocs.yml  prebuild.yml  py-hypertrace.yml  pythontests.yml  release.yml  results.yml  results_close_pr.yml  results_imagecube_small.yml  results_lakemary.yml  results_seabass.yml  test-build.yml  test-pip-package-ubuntu.yml  test-pythonpath-ubuntu.yml  test-ubuntu-pip-package.yml  test_path.yml  test_pip.yml  test_release.yml  tests.yml  utils-workflow.yml  version.yml
.imgspec/: algorithm_config.yaml  apply_glt.py  basic_surface.json  convert_csv_to_envi.py  get_paths_from_granules.py  imgspec_run.sh  surface.json  upgrade.py  wavelength_file.py
3.7.3/: 404.html  index.html  sitemap.xml
3.7.3/docker/: index.html
3.7.4/: 404.html  index.html  sitemap.xml
3.7.4-alpha/: 404.html  index.html  sitemap.xml
3.7.4-alpha/docker/: index.html
3.7.4/docker/: index.html
3.7.4/search/: search_index.json
3.7.5/: 404.html  index.html  sitemap.xml
3.7.5/docker/: index.html
3.7.5/search/: search_index.json
3.7.6/: 404.html  index.html  sitemap.xml
3.7.6/docker/: index.html
3.7.6/examples/: index.html
3.7.6/search/: search_index.json
4.0.0/: 404.html  index.html  sitemap.xml
4.0.0/docker/: index.html
4.0.0/examples/: index.html
4.1.0/: 404.html  index.html  sitemap.xml
4.1.0/docker/: index.html
4.1.0/examples/: index.html
4.1.1/: 404.html  index.html  sitemap.xml
4.1.1/docker/: index.html
4.1.1/examples/: index.html
4.1.2/: 404.html  index.html  sitemap.xml
4.1.2/docker/: index.html
4.1.2/examples/: index.html
4.1.2/stylesheets/: icons.css
data/: aerosol_model.txt  aerosol_template.json  av3_osf_uncertainty.txt  avirisc_noise.txt  avirisc_noise_233.txt  avirisng_model_discrepancy.mat  avirisng_noise.txt  avirisng_systematic_error.txt  earth_sun_distance.txt  emit_model_discrepancy.mat  emit_noise.txt  emit_osf_uncertainty.txt  h2o_indices.txt  joint_avirisc_223_hytes_channelized_uncertainty.txt  joint_avirisc_noise_223_hytes_parametric_noise_model.txt  mas_wavelengths.txt  oci_f0_tsis.txt  oci_noise.txt  sbg_noise_coeffs.txt  tsis_f0_0p1.txt  tsis_f0_0p5.txt
data/iop/: h2oabs.txt  h2oscatter.txt  k_liquid_water_ice.xlsx  pigments.txt  prism_resid_abs.mat
data/reflectance/: README.txt  ecostress_library_with_mixtures  ecostress_library_with_mixtures.hdr  ecostress_snow_mixtures  ecostress_snow_mixtures.hdr  ocean_spectra_rev2.hdr  surface_model_ucsb.hdr
data/surface/: filtered_ocean.hdr  filtered_other.hdr  filtered_veg.hdr  surface_20210811.json  surface_20220714.json  surface_20220908.json  surface_20221001.json  surface_20221020.json  surface_20240103.json  surface_Liquids  surface_Liquids.hdr  surface_mixture_veg_soil.hdr
dev/: 404.html  index.html  sitemap.xml
dev/docker/: index.html
dev/examples/: index.html
dev/search/: search_index.json
docs/: CONTRIBUTING.rst  Docker-README.md  Makefile  conf.py  docker.md  examples.md  index.md  index.rst  isofit_formats.rst  multicomponent_surface.rst  release_notes.rst
docs/_static/: .gitignore
docs/developers/: contributing.md  documentation.md  testing.md
docs/extra_downloads/: building_examples.md  data.md
docs/getting_started/: best_practices.md  examples.md  installation.md
docs/html/: README_include.html  genindex.html  index.html  isofit_formats.html  multicomponent_surface.html  objects.inv  release_notes.html  search.html  searchindex.js
docs/information/: bibliography.md  code_of_conduct.md
docs/source/: conf.py  index.rst  isofit.configs.base_config.rst  isofit.configs.configs.rst  isofit.configs.rst  isofit.configs.sections.forward_model_config.rst  isofit.configs.sections.implementation_config.rst  isofit.configs.sections.input_config.rst  isofit.configs.sections.instrument_config.rst  isofit.configs.sections.inversion_config.rst  isofit.configs.sections.output_config.rst  isofit.configs.sections.radiative_transfer_config.rst  isofit.configs.sections.rst  isofit.configs.sections.statevector_config.rst  isofit.configs.sections.surface_config.rst  isofit.core.common.rst  isofit.core.fileio.rst  isofit.core.forward.rst  isofit.core.geometry.rst  isofit.core.instrument.rst  isofit.core.isofit.rst  isofit.core.rst  isofit.core.sunposition.rst  isofit.inversion.inverse.rst  isofit.inversion.inverse_mcmc.rst  isofit.inversion.inverse_simple.rst  isofit.inversion.rst  isofit.radiative_transfer.libradtran.rst  isofit.radiative_transfer.look_up_tables.rst  isofit.rst  (+38 more)
examples/: test_config.py  test_forward.py  unit_test_example.py
isofit/: __init__.py  __main__.py  common.py  fileio.py  forward.py  geometry.py  instrument.py  inverse.py  inverse_mcmc.py  inverse_simple.py  isofit.py  output.py  rt_6s.py  rt_libradtran.py  rt_lut.py  rt_modtran.py  rt_planetary.py  rt_telluric.py  sunposition.py  surf.py  surf_cat.py  surf_emissive.py  surf_glint.py  surf_iop.py  surf_multicomp.py  utils.py
recipe/: README.md  docker.yml  docs.yml  environment_isofit_arm64.yml  environment_isofit_basic.yml  environment_isofit_docs.yml  isofit.yml  meta.yaml  slim.Dockerfile  unpinned.yml
scripts/: download-and-build-6s.sh  download-and-unpack-hypertrace-data.sh  download-and-unpack-sRTMnet.sh  run-tests.sh  setup-devenv.sh  startJupyter.sh
test.zarr/: zarr.json
tests/: test_pep8.py  test_rt_libradtran.py
utils/: empline.py  extract.py  gennoise.py  instmodel.py  makeconfig.py  remap.py  representative.py  segment.py  surfmodel.py
(+2828 files in other folders)
