[project]
name = "isofit"
dynamic = ["version"]
description = "Imaging Spectrometer Optimal FITting"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["isofit"]
authors = [
  {name = "David R. Thompson", email = "david.r.thompson@jpl.nasa.gov"},
  {name = "Philip G. Brodrick", email = "philip.brodrick@jpl.nasa.gov"},
  {name = "Niklas Bohn", email = "urs.n.bohn@jpl.nasa.gov"},
  {name = "Evan Greenberg", email = "evan.greenberg@jpl.nasa.gov"},
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"},
  {name = "Winston Olson-Duvall", email = "winston.olson-duvall@jpl.nasa.gov"},
]
maintainers = [
  {name = "David R. Thompson", email = "david.r.thompson@jpl.nasa.gov"},
  {name = "Philip G. Brodrick", email = "philip.brodrick@jpl.nasa.gov"},
  {name = "Niklas Bohn", email = "urs.n.bohn@jpl.nasa.gov"},
  {name = "Evan Greenberg", email = "evan.greenberg@jpl.nasa.gov"},
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"},
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.3.0",
    "h5py<=3.14.0",
    "netcdf4>=1.7.3",
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
    "ray>=2.49.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "spectral>=0.24",
    "utm>=0.8.1",
    "xarray>=2025.6.1",
    "xxhash>=3.6.0",
    "zarr>=2,<3",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
]
test = [
    "pytest>=8.4.2",
]
docker = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx-autoapi>=3.6.1",
    "sphinx-rtd-theme>=3.0.2",
]

[project.urls]
repository = "https://github.com/isofit/isofit"
documentation = "https://isofit.readthedocs.io/en/latest/index.html"

[project.scripts]
isofit = "isofit.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "isofit/__init__.py"
