[project]
name = "isofit"
dynamic = ["version"]
description = "Imaging Spectrometer Optimal FITting"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["isofit"]
authors = [
  {name = "David R. Thompson", email = "david.r.thompson@jpl.nasa.gov"},
  {name = "Philip G. Brodrick", email = "philip.brodrick@jpl.nasa.gov"},
  {name = "Niklas Bohn", email = "urs.n.bohn@jpl.nasa.gov"},
  {name = "Evan Greenberg", email = "evan.greenberg@jpl.nasa.gov"},
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"},
  {name = "Winston Olson-Duvall", email = "winston.olson-duvall@jpl.nasa.gov"},
]
maintainers = [
  {name = "David R. Thompson", email = "david.r.thompson@jpl.nasa.gov"},
  {name = "Philip G. Brodrick", email = "philip.brodrick@jpl.nasa.gov"},
  {name = "Niklas Bohn", email = "urs.n.bohn@jpl.nasa.gov"},
  {name = "Evan Greenberg", email = "evan.greenberg@jpl.nasa.gov"},
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"},
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
    "dask",
    "h5py<=3.14",
    "netcdf4",
    "numpy>=2",
    "pyyaml",
    "ray",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "spectral",
    "utm",
    "xarray",
    "xxhash",
    "zarr>=2,<3",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pre-commit",
]
test = [
    "pytest",
]
docker = [
    "ipykernel",
    "ipywidgets",
    "matplotlib",
]
docs = [
    "myst-parser",
    "sphinx-autoapi",
    "sphinx-rtd-theme",
]

[project.urls]
repository = "https://github.com/isofit/isofit"
documentation = "https://isofit.readthedocs.io/en/latest/index.html"

[project.scripts]
isofit = "isofit.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "isofit/__init__.py"
