[project]
name = "isofit"
dynamic = ["version"]
description = "Imaging Spectrometer Optimal FITting"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["isofit"]
authors = [
  {name = "David R. Thompson", email = "david.r.thompson@jpl.nasa.gov"},
  {name = "Philip G. Brodrick", email = "philip.brodrick@jpl.nasa.gov"},
  {name = "Niklas Bohn", email = "urs.n.bohn@jpl.nasa.gov"},
  {name = "Evan Greenberg", email = "evan.greenberg@jpl.nasa.gov"},
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"},
  {name = "Winston Olson-Duvall", email = "winston.olson-duvall@jpl.nasa.gov"},
]
maintainers = [
  {name = "David R. Thompson", email = "david.r.thompson@jpl.nasa.gov"},
  {name = "Philip G. Brodrick", email = "philip.brodrick@jpl.nasa.gov"},
  {name = "Niklas Bohn", email = "urs.n.bohn@jpl.nasa.gov"},
  {name = "Evan Greenberg", email = "evan.greenberg@jpl.nasa.gov"},
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click",
  "dask",
  "h5py <= 3.14.0",
  "netCDF4 < 1.7.4",
  "numpy >= 1.20",
  "torch",
  "pyyaml >= 5.3.2",
  "ray >= 1.2.0",
  "scikit-image >= 0.17.0",
  "scikit-learn >= 0.19.1",
  "scipy >= 1.3.0",
  "spectral >= 0.19",
  "xarray",
  "xxhash >= 1.2.0",
  "zarr >= 2,<3",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "black",
  "isort",
]
test = [
  "pytest >= 3.5.1",
]
docker = [
  "ipykernel",
  "ipywidgets",
  "matplotlib",
]
docs = [
  "mike>=2.1.3",
  "mkapi>=4.5.0",
  "mkdocs>=1.6.1",
  "mkdocs-material[imaging]>=9.7.1",
]

[tool.uv.sources]
torch = [{index="pytorch-cpu"}]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.urls]
repository = "https://github.com/isofit/isofit"
documentation = "https://isofit.readthedocs.io/en/latest/index.html"

[project.scripts]
isofit = "isofit.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "isofit/__init__.py"
