[metadata]
name = isofit
version = attr: isofit.__version__
author = David R. Thompson, Winston Olson-Duvall, Philip G. Brodrick, and Team
author_email = david.r.thompson@jpl.nasa.gov
url = http://github.com/isofit/isofit
description = Imaging Spectrometer Optimal FITting
long_description = file: README.md
long_description_content_type = text/x-rst

license = BSD 3-Clause License
classifiers =
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
  numpy >= 1.20
  protobuf ~= 3.19.0
  scipy >= 1.3.0
  matplotlib >= 2.2.2
  scikit-learn >= 0.19.1
  scikit-image >= 0.17.0
  spectral >= 0.19
  pytest >= 3.5.1
  pep8 >= 1.7.1
  xxhash >= 1.2.0
  pyyaml >= 5.3.2
  ray >= 1.2.0
  pandas >= 0.24.0
  gdal >= 2.0.0
  ndsplines >= 0.1.2
  tensorflow >= 2.0.1

[options.entry_points]
console_scripts =
  isofit-run = isofit:run_isofit
  isofit-sun = isofit:run_sunposition
  isofit-add_HRRR_to_modtran = isofit.utils.add_HRRR_profiles_to_modtran_config:main
  isofit-analytical_line = isofit.utils.analytical_line:main
  isofit-multisurface_oe = isofit.utils.multisurface_oe:main

[options.extras_require]
dev =
  pre-commit
  black
  isort
