[metadata]
name = isofit
version = 2.10.2
author = David R. Thompson, Winston Olson-Duvall, Philip G. Brodrick, and Team
author_email = david.r.thompson@jpl.nasa.gov
url = http://github.com/isofit/isofit
description = Imaging Spectrometer Optimal FITting
long_description = file: README.rst
long_description_content_type = text/x-rst

license = BSD 3-Clause License
classifiers =
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
  click
  gdal >= 2.0.0
  matplotlib >= 2.2.2
  ndsplines >= 0.1.2
  numpy >= 1.20
  pandas >= 0.24.0
  pep8 >= 1.7.1
  protobuf ~= 3.19.0
  pytest >= 3.5.1
  pyyaml >= 5.3.2
  ray >= 1.2.0
  scikit-image >= 0.17.0
  scikit-learn >= 0.19.1
  scipy >= 1.3.0
  spectral >= 0.19
  tensorflow >= 2.0.1
  utm
  xxhash >= 1.2.0

[options.entry_points]
console_scripts =
  isofit = isofit:cli

[options.extras_require]
dev =
  pre-commit
  black
  isort
