[metadata]
name = isofit
version = 3.2.1
author = David R. Thompson, Winston Olson-Duvall, Philip G. Brodrick, and Team
author_email = david.r.thompson@jpl.nasa.gov
url = http://github.com/isofit/isofit
description = Imaging Spectrometer Optimal FITting
long_description = file: README.rst
long_description_content_type = text/x-rst

license = BSD 3-Clause License
classifiers =
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
install_requires =
  click
  dask
  h5py
  netCDF4 < 1.7.1
  numpy >= 1.20, < 2.0.0
  pandas >= 0.24.0
  pyyaml >= 5.3.2
  ray >= 1.2.0
  scikit-image >= 0.17.0
  scikit-learn >= 0.19.1
  scipy >= 1.3.0
  spectral >= 0.19
  utm
  xarray < 2024.1.1
  xxhash >= 1.2.0

[options.entry_points]
console_scripts =
  isofit = isofit.__main__:cli

[options.extras_require]
dev =
  pre-commit
  black
  isort
test =
  pytest >= 3.5.1
